--- a/man.html
+++ b/man.html
@@ -12,7 +12,7 @@
     />
     <script defer src="js/bootstrap.bundle.min.js"></script>
 
-    <title>man hair</title>
+    <title>Mans hair</title>
     <style>
       .c-item {
         height: 480px;
@@ -61,11 +61,14 @@
             <li class="nav-item">
               <a class="nav-link" href="#Designer">Designer</a>
             </li>
-            <li class="nav-item"></li>
+            <li class="nav-item">
               <a class="nav-link" href="#introduce">Introduce</a>
             </li>
-            <li class="nav-item"></li>
+            <li class="nav-item">
               <a class="nav-link" href="#style">Style</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link login" href="login.html">로그인</a>
             </li>
           </ul>
         </div>
@@ -142,10 +145,8 @@
       </div>
       <div class="row pb-5">
         <div class="col-lg-4 col-md-6 mb-5">
-          <div class="card">
-            <div class="shadow">
+          <div class="card shadow">
             <img src="images/1d.jpg" alt="" class="card-img-top" />
-           </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 mb-4">
