--- a/man.html
+++ b/man.html
@@ -14,6 +14,9 @@
 
     <title>Mans hair</title>
     <style>
+      body {
+        font-family: "Playfair Display", serif;
+      }
       .c-item {
         height: 480px;
       }
@@ -26,6 +29,7 @@
       .overview {
         height: 380px;
         background-color: black;
+        
 
       }
       .t1 {
@@ -145,7 +149,7 @@
       </div>
       <div class="row pb-5">
         <div class="col-lg-4 col-md-6 mb-5">
-          <div class="card shadow">
+          <div class="card">
             <img src="images/1d.jpg" alt="" class="card-img-top" />
           </div>
         </div>
@@ -193,7 +197,7 @@
           <img src="images/1d.jpg" alt="" class="img-fluid" />
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>Jone</h3>
+          <h3><strong>Jone</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -248,7 +252,7 @@
           <img src="images/two.jpg" alt="" class="img-fluid" />
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>Lucas</h3>
+          <h3><strong>Lucas</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -303,7 +307,7 @@
           <img src="images/7d.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>Andrew</h3>
+          <h3><strong>Andrew</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -358,7 +362,7 @@
           <img src="images/4d.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>June</h3>
+          <h3><strong>June</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -413,7 +417,7 @@
           <img src="images/three.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>Jeong</h3>
+          <h3><strong>Jeong</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -468,7 +472,7 @@
           <img src="images/6d.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-md-7 offset-lg-1">
-          <h3>Mattew</h3>
+          <h3><strong>Mattew</strong></h3>
           <p class="lh-lg">
             Those who want to receive professional styling just for men, Those
             who are sensitive to the latest fashion styles and those who want to
@@ -615,6 +619,7 @@
     <section>
        <footer class="bg-dark py-5 mt-0">
         <div class="container text-center text-white">
+          <a href="#"><img src="images/twit.png" alt=""><img src="images/face.png" alt=""><img src="images/insta1.png" alt=""></a>
         <p class="display-8 mb-3">상호 :(주)마제스티앤순수 &#124; 대표 : 강남구 &#124; 사업자번호 : 000-00-00000 </p>
         <p class="display-8 mb-3">개설/가맹문의 : 1234-5678 &#124; 제휴/기타문의 : 222@2222.kr &#124; 주소 : 서울시 강남구 테헤란로 111 대건빌딩 5층</p>
         <small>Copyright&copy;2024(주)아이엔지스토리 All rights reserved.</small>
